--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,21 +1,25 @@
-
-
 <div class='container'>
                 
-        <div class="flip-card"  >
-           <div class="flip-card-inner">
-              <div class="flip-card-front">
+                <div class="flip-card"  >
+                  <div class="flip-card-inner ">
+                      <div class="flip-card-front">
+                                     <br>
+                                     <p>The online recommendation system has become a trend
+                                          now a days rather than going out and buying items for themselves.Reason being, 
+                                          online recommendation provides an easier and quicker way to buy 
+                                          items and transactions are also quick when it is done online.
+                                          Recommended systems are powerful new technology and it helps users to 
+                                          find items which they want</p>             
                               
-                      <img src="./assets/book.jfif" alt="Card image"  >
-                      
-              </div>
-              <div class="flip-card-back" >
-                      <br>
-                      <p>Some example text some example text.
-                       Some example text some example text. 
-                      Some example text some example text. 
-                      Some example text some example text.</p>
-             </div>         
-</div>
-<router-outlet></router-outlet>
+                      </div>
+                      <div class="flip-card-back" style="padding-top:20%; ">
+                              <br>
+                              <i>Online book selling Web sites now-a-days is competing with each
+                                    other by considering many attributes. 
+                                    A recommendation system is one of the strongest 
+                                    tools to increase profits and retaining buyer.</i>
+                     </div> 
+                  </div>
+                 </div>          
 
+</div> 
