--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,123 @@
- <!-- <app-homepage></app-homepage>  -->
+<!-- <!Doctype HTML>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="description" content="Fullscreen Background Image Slideshow with CSS3 - A Css-only fullscreen background image slideshow" />
+    <meta name="keywords" content="css3, css-only, fullscreen, background, slideshow, images, content" />
+    <meta name="author" content="Codrops" />
+<script type="text/javascript" src="js/modernizr.custom.86080.js"></script>
+</head>
+<body>
+
+<ul class="cb-slideshow" id='image'>
+    <li><span>Image 01</span><div></div></li>
+    <li><span>Image 02</span><div></div></li>
+    <li><span>Image 03</span><div></div></li>
+    <li><span>Image 04</span><div></div></li>
+    <li><span>Image 05</span><div></div></li>
+    <li><span>Image 06</span><div></div></li> 
+</ul>
+<header>
+    <nav class="navbar navbar-expand-sm ">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink='AboutUs'  (click)='visible()' >About us</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink='register' (click)='visible()'>Sign up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink='Login' id='login' (click)='visible()'>Login in</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  card deck-->
+  <!-- <main [@slideInOut]="o.isActivated ? o.activatedRoute : ''">
+      <router-outlet #o="outlet"></router-outlet>
+    </main>
+<div class="container" id='deck'>
+    <div class="card-deck">
+      <div class="flip-card">
+            <div class="flip-card-inner ">
+                    <div class="flip-card-front">
+                        <img src="../assets/b.png" alt="Avatar" style="width:200px;height:300px;">              
+                    </div>
+                    <div class="flip-card-back" >
+                        <img class="card-img-top" src="../assets/male.png" alt="Avatar"  style="width:100%;height: 200px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Sanket Bailmare</h5>
+                            <p class="card-text">Team member</p>    
+                   </div>
+                   </div> 
+            </div>
+      </div>      
+           <div class="flip-card">
+                 <div class="flip-card-inner ">
+                    <div class="flip-card-front">
+                        <img src="../assets/o.png" alt="Avatar" style="width:200px;height:250px;padding-top:25%; ">                            
+                    </div>
+                    <div class="flip-card-back" >
+                        <img class="card-img-top" src="../assets/male.png" alt="Avatar" style="width:100%;height: 200px;">
+                        <div class="card-body">
+                            <h5 class="card-title" >Reuel Lemos</h5>
+                            <p class="card-text">Team member</p>    
+                        </div>
+                   </div>         
+                </div>
+            </div> 
+            <div class="flip-card">
+                <div class="flip-card-inner ">
+                   <div class="flip-card-front">
+                      <img src="../assets/o.png" alt="Avatar" style="width:200px;height:250px;padding-top:25%; ">  
+                   </div>
+                   <div class="flip-card-back" >
+                      <img class="card-img-top" src="../assets/female.png" alt="Avatar" style="width:100%;height: 230 px;">
+                      <div class="card-body">
+                          <h4 class="card-title">Vaishnavi Darekar</h4>
+                          <p class="card-text">Team Leader</p>    
+                      </div>
+                    </div>         
+               </div>
+           </div>       
+          <div class="flip-card">
+              <div class="flip-card-inner ">
+                    <div class="flip-card-front">
+                        <img src="../assets/k.png" alt="Avatar" style="width:200px;height:300px;"> 
+                    </div>
+                    <div class="flip-card-back" >
+                        <img class="card-img-top" src="../assets/male.png" alt="Avatar"  style="width:100%;height: 200px;"> 
+                        <div class="card-body">
+                            <h5 class="card-title">Chaitanya Kulkarni</h5>
+                            <p class="card-text">Team member</p>    
+                        </div>
+                   </div>         
+              </div>
+           </div>
+      <div class="flip-card">
+          <div class="flip-card-inner ">
+                  <div class="flip-card-front">
+                      <img src="../assets/s.png" alt="Avatar" style="width:200px;height:300px;"> 
+                  </div>
+                  <div class="flip-card-back" >
+                      <img class="card-img-top" src="../assets/male.png" alt="Avatar"  style="width:100%;height: 200px;">
+                      <div class="card-body">
+                          <h5 class="card-title">Harish Chetty</h5>
+                          <p class="card-text">Team member</p>    
+                      </div>
+                 </div>         
+            </div>
+    </div>
+  </div>
+</div>   
+  </body>
+  </html>
+<router-outlet></router-outlet> -->
 <main [@slideInOut]="o.isActivated ? o.activatedRoute : ''">
-        <router-outlet #o="outlet"></router-outlet>
-      
-      </main>
+    <router-outlet #o="outlet"></router-outlet>
+  </main>
+  <!-- <app-homepage></app-homepage> -->
