--- a/src/app/shelf/shelf.component.css
+++ b/src/app/shelf/shelf.component.css
@@ -1,11 +1,19 @@
-
+.navbar{
+    background-color: black;
+    background: rgba(0, 0, 0, 0.6);
+    box-shadow: 3px 3px rgba(0, 0, 0, 0.6);
+    
+}
+.navbar-brand, .nav-link {
+    color: #fff;
+}
 .dropdown-item{
     color: whitesmoke;
 }
 
 
-.dropdown-menu .dropdown-item{
-    background-color: #343a40;
+.dropdown-menu, .dropdown-item{
+    background:rgba(0, 0, 0, 0.6);
 }
 div.dropdown-menu.show{
     margin-top: 0;
@@ -15,6 +23,7 @@ div.dropdown-menu.show{
 .example-card {
     max-width: 400px;
     margin: 40px;
+    
   }
   
   .example-header-image {
@@ -28,6 +37,9 @@ div.dropdown-menu.show{
     width: 400px;
     height: 400px;
     perspective: 1000px;
+    
+    
+    
     }
     
     .flip-card-inner {
@@ -37,9 +49,13 @@ div.dropdown-menu.show{
     text-align: center;
     transition: transform 0.6s;
     transform-style: preserve-3d;
+    
+    
+    
     /* box-shadow: 5px 10px rgba(0, 0, 0, 0.3);
     */
     } 
+    
     
     .flip-card:hover .flip-card-inner {
     
@@ -59,10 +75,10 @@ div.dropdown-menu.show{
     position: absolute ;
     backface-visibility: hidden;
     
+  
     }
     
     .flip-card-front {
-    
     color: black;
     }
     
@@ -77,9 +93,10 @@ div.dropdown-menu.show{
         color: blue;
     }
      .abc:hover .fa-lg{
-        color:red;
+        
         transform: scale(1.5);
         transition:300ms ease-in-out; 
+        color: blue;
     }
 
     .mm{
@@ -91,6 +108,233 @@ div.dropdown-menu.show{
     .black{
         color:black;
     }
+
+    
     .mat-button{
         outline: none;
+    }
+
+     .mat-card-image{
+        
+            width: 100%;
+            height: 18vw;
+            object-fit: cover;
+        
+    } 
+
+    
+    mat-card-content{
+            width: 100%;
+            height: 21.6vw;   
+
+            /* object-fit: cover; */
+            /* overflow: hidden; */
+
+
+    }
+
+    .flip-card-inner,.flip-card-front,.flip-card-back{
+            width: 100%;
+            height: 100%;
+            
+            
+            object-fit: cover;
+            align-self: auto;
+
+    }
+    
+    /* background carousel */
+   
+    .cb-slideshow,
+    .cb-slideshow:after { 
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        left: 0px;
+        z-index: 0; 
+    }
+    #image {
+        list-style-type: none;
+      }
+    .cb-slideshow:after { 
+        content: '';
+        background: rgba(0, 0, 0, 0.3);
+    }
+    .cb-slideshow li span { 
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        color: transparent;
+        background-size: cover;
+        background-position: 50% 50%;
+        background-repeat: none;
+        opacity: 0;
+        z-index: 0;
+        -webkit-backface-visibility: hidden;
+        -webkit-animation: imageAnimation 36s linear infinite 0s;
+        -moz-animation: imageAnimation 36s linear infinite 0s;
+        -o-animation: imageAnimation 36s linear infinite 0s;
+        -ms-animation: imageAnimation 36s linear infinite 0s;
+        animation: imageAnimation 36s linear infinite 0s; 
+    }
+    .cb-slideshow li div { 
+        z-index: 1000;
+        position: absolute;
+        bottom: 30px;
+        left: 0px;
+        width: 100%;
+        text-align: center;
+        opacity: 0;
+        color: #fff;
+        -webkit-animation: titleAnimation 36s linear infinite 0s;
+        -moz-animation: titleAnimation 36s linear infinite 0s;
+        -o-animation: titleAnimation 36s linear infinite 0s;
+        -ms-animation: titleAnimation 36s linear infinite 0s;
+        animation: titleAnimation 36s linear infinite 0s; 
+    }
+    .cb-slideshow li div h3 { 
+        font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
+        font-size: 240px;
+        padding: 0;
+        line-height: 200px; 
+    }
+    .cb-slideshow li:nth-child(1) span { 
+        background-image: url(../../assets/book1.jpg) 
+    }
+    .cb-slideshow li:nth-child(2) span { 
+        background-image: url(../../assets/book2.png);
+        -webkit-animation-delay: 6s;
+        -moz-animation-delay: 6s;
+        -o-animation-delay: 6s;
+        -ms-animation-delay: 6s;
+        animation-delay: 6s; 
+    }
+    .cb-slideshow li:nth-child(3) span { 
+        background-image: url(../../assets/book3.png);
+        -webkit-animation-delay: 12s;
+        -moz-animation-delay: 12s;
+        -o-animation-delay: 12s;
+        -ms-animation-delay: 12s;
+        animation-delay: 12s; 
+    }
+    .cb-slideshow li:nth-child(4) span { 
+        background-image: url(../../assets/book1.jpg) ;
+        -webkit-animation-delay: 18s;
+        -moz-animation-delay: 18s;
+        -o-animation-delay: 18s;
+        -ms-animation-delay: 18s;
+        animation-delay: 18s; 
+    }
+    .cb-slideshow li:nth-child(5) span { 
+        background-image: url(../../assets/book2.png);
+        -webkit-animation-delay: 24s;
+        -moz-animation-delay: 24s;
+        -o-animation-delay: 24s;
+        -ms-animation-delay: 24s;
+        animation-delay: 24s; 
+    }
+    .cb-slideshow li:nth-child(6) span { 
+        background-image: url(../../assets/book3.png);
+        -webkit-animation-delay: 30s;
+        -moz-animation-delay: 30s;
+        -o-animation-delay: 30s;
+        -ms-animation-delay: 30s;
+        animation-delay: 30s; 
+    }
+    .cb-slideshow li:nth-child(2) div { 
+        -webkit-animation-delay: 6s;
+        -moz-animation-delay: 6s;
+        -o-animation-delay: 6s;
+        -ms-animation-delay: 6s;
+        animation-delay: 6s; 
+    }
+    .cb-slideshow li:nth-child(3) div { 
+        -webkit-animation-delay: 12s;
+        -moz-animation-delay: 12s;
+        -o-animation-delay: 12s;
+        -ms-animation-delay: 12s;
+        animation-delay: 12s; 
+    }
+    .cb-slideshow li:nth-child(4) div { 
+        -webkit-animation-delay: 18s;
+        -moz-animation-delay: 18s;
+        -o-animation-delay: 18s;
+        -ms-animation-delay: 18s;
+        animation-delay: 18s; 
+    }
+    .cb-slideshow li:nth-child(5) div { 
+        -webkit-animation-delay: 24s;
+        -moz-animation-delay: 24s;
+        -o-animation-delay: 24s;
+        -ms-animation-delay: 24s;
+        animation-delay: 24s; 
+    }
+    .cb-slideshow li:nth-child(6) div { 
+        -webkit-animation-delay: 30s;
+        -moz-animation-delay: 30s;
+        -o-animation-delay: 30s;
+        -ms-animation-delay: 30s;
+        animation-delay: 30s; 
+    }
+    
+    /* Animation for the slideshow images */
+    @-webkit-keyframes imageAnimation { 
+        0% { opacity: 0;
+        -webkit-animation-timing-function: ease-in; }
+        8% { opacity: 1;
+             -webkit-animation-timing-function: ease-out; }
+        17% { opacity: 1 }
+        25% { opacity: 0 }
+        100% { opacity: 0 }
+    }
+    @-moz-keyframes imageAnimation { 
+        0% { opacity: 0;
+        -moz-animation-timing-function: ease-in; }
+        8% { opacity: 1;
+             -moz-animation-timing-function: ease-out; }
+        17% { opacity: 1 }
+        25% { opacity: 0 }
+        100% { opacity: 0 }
+    }
+    @-o-keyframes imageAnimation { 
+        0% { opacity: 0;
+        -o-animation-timing-function: ease-in; }
+        8% { opacity: 1;
+             -o-animation-timing-function: ease-out; }
+        17% { opacity: 1 }
+        25% { opacity: 0 }
+        100% { opacity: 0 }
+    }
+    @-ms-keyframes imageAnimation { 
+        0% { opacity: 0;
+        -ms-animation-timing-function: ease-in; }
+        8% { opacity: 1;
+             -ms-animation-timing-function: ease-out; }
+        17% { opacity: 1 }
+        25% { opacity: 0 }
+        100% { opacity: 0 }
+    }
+    @keyframes imageAnimation { 
+        0% { opacity: 0;
+        animation-timing-function: ease-in; }
+        8% { opacity: 1;
+             animation-timing-function: ease-out; }
+        17% { opacity: 1 }
+        25% { opacity: 0 }
+        100% { opacity: 0 }
+    }
+    
+    /* Show at least something when animations not supported */
+    .no-cssanimations .cb-slideshow li span{
+        opacity: 1;
+    }
+    
+    @media screen and (max-width: 1140px) { 
+        .cb-slideshow li div h3 { font-size: 140px }
+    }
+    @media screen and (max-width: 600px) { 
+        .cb-slideshow li div h3 { font-size: 80px }
     }
