--- a/src/app/shelf/shelf.component.html
+++ b/src/app/shelf/shelf.component.html
@@ -1,82 +1,85 @@
 <!DOCTYPE html>
 <html>
-    <head>
-
-    </head>
-    <body>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <a class="navbar-brand" href="#">Book Shelf</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                  
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                      <ul class="navbar-nav mr-auto">
-                        <div class="text-center mx-auto" style="display:inline-block" >
-                        <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Categories
-                          </a>
-                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="" selected="selected">Action</a>
-                            <a class="dropdown-item" href="">Romance</a>
-                            <a class="dropdown-item" href="">Philosophy</a>
-                            <a class="dropdown-item" href="">Thriller</a>
-                            
-                          </div>
-                        </li>
-                    </div>
-                      </ul>
-                      <div class="form-inline my-2 my-lg-0" >
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="searchname">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="searchBook()">Search</button>
-                      </div>
-                    </div>
-            
-                  </nav>
-                  <div class="card-deck mx-auto">
-                    
-                      <div *ngFor='let index of CardsNumbers;let i = index'>
-                        <div class="flip-card" id="{{'card'+i}}">
-                          <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                          
-                        <mat-card class="example-card " >
-                      <mat-card-header>
-                        <div mat-card-avatar class="example-header-image"></div>
-                        <mat-card-title>Shiba Inu</mat-card-title>
-                        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-                      </mat-card-header>
-                      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                        </mat-card>
-                    </div>
-                    <div class="flip-card-back">
-                      <mat-card class="example-card">
-                      <mat-card-content>
-                        <p>
-                          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                          bred for hunting.
-                        </p>
-                      </mat-card-content>
-                      <mat-card-actions >
-                        <!-- <button mat-button><i class="fa fa-share-alt fa-lg" aria-hidden="true"></i></button> -->
-                        <button mat-button><span class="fa fa-share-alt fa-lg mm" aria-hidden="true"></span></button>
-                        <button mat-button class="def"><span class="fa fa-share-alt fa-lg" aria-hidden="true"></span></button>
-                        <button mat-button (click)="clickEvent(i)" class="abc"><span class="far fa-heart fa-lg" id="{{'action'+i}}"  [style.color]="'black'" aria-hidden="true"></span></button>
-                      </mat-card-actions>
-                    </mat-card>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+      <meta name="description" content="Fullscreen Background Image Slideshow with CSS3 - A Css-only fullscreen background image slideshow" />
+      <meta name="keywords" content="css3, css-only, fullscreen, background, slideshow, images, content" />
+      <meta name="author" content="Codrops" />
+  <script type="text/javascript" src="js/modernizr.custom.86080.js"></script>
+  </head>
+   <body>
+         <ul class="cb-slideshow" id='image'>
+               <li><span>Image 01</span><div></div></li>
+               <li><span>Image 02</span><div></div></li>
+               <li><span>Image 03</span><div></div></li>
+               <li><span>Image 04</span><div></div></li>
+               <li><span>Image 05</span><div></div></li>
+               <li><span>Image 06</span><div></div></li> 
+           </ul>
+      <nav class="navbar navbar-expand-lg ">
+         <a class="navbar-brand" href="#">Book Shelf</a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+               <div class="text-center mx-auto" style="display:inline-block" >
+                  <li class="nav-item dropdown">
+                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     Categories
+                     </a>
+                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <span class="dropdown-item" (click)="get_category_wise_books('Autobiography')" id="Autobiography">Autobiography</span>
+                        <span class="dropdown-item" (click)="get_category_wise_books('Romantic')" id="Romance">Romance</span>
+                        <span class="dropdown-item" (click)="get_category_wise_books('Technical(Computer)')" id="Technical(Computer)">Technical</span>
+                        <span class="dropdown-item" (click)="get_category_wise_books('Inspirational')" id="Inspirational">Inspirational</span>
+                     </div>
+                  </li>
+               </div>
+            </ul>
+            <div class="form-inline my-2 my-lg-0" >
+               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="searchname" (keyup)="search_books()" (focus)="search_books()">
+               <button class="btn btn-outline-danger my-2 my-sm-0" style="margin-left: 15px;" type="submit" (click)="searchBook()">Logout</button>
+            </div>
+         </div>
+      </nav>
+      <div class="card-deck" style="margin-left: 80px">
+         <div *ngFor='let index of selectedBooks;let i = index'>
+            <div class="flip-card" id="{{index}}">
+               <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                     <mat-card class="example-card " style="min-height: 380px;" >
+                        <mat-card-header>
+                           <!-- <div mat-card-avatar class="example-header-image"></div> -->
+                           <mat-card-title>{{ index.book_title }}</mat-card-title>
+                           <mat-card-subtitle>{{ index.book_author }}</mat-card-subtitle>
+                        </mat-card-header>
+                        <img mat-card-image src="../../assets/books/{{index.book_image}}" alt="Photo of a Shiba Inu" >
+                     </mat-card>
                   </div>
-                </div>
-              </div>
-                    
-                   
+                  <div class="flip-card-back">
+                     <mat-card class="example-card">
+                        <mat-card-content>
+                           <p>
+                              {{ index.book_desc.substring(0,450) }}
+                           </p>
+                        </mat-card-content>
+                        <mat-card-actions>
+                           <!-- <button mat-button><i class="fa fa-share-alt fa-lg" aria-hidden="true"></i></button> -->
+                           <button mat-button><span class="fa fa-share-alt fa-lg mm" aria-hidden="true"></span></button>
+                           <button mat-button><span class="fa fa-share-alt fa-lg mm" aria-hidden="true"></span></button>
+                           <button mat-button (click)="showMore(index)" class="abc def"><span class="fa fa-info-circle fa-lg" aria-hidden="true"></span></button>
+                           <button mat-button (click)="showSite(index.book_store)" class="abc def"><span class="fa fa-globe fa-lg" aria-hidden="true"></span></button>
+                           <!-- <button mat-button (click)="clickEvent(i)" class="abc"><span class="far fa-heart fa-lg" id="{{'action'+i}}"  [style.color]="'black'" aria-hidden="true"></span></button> -->
+                        </mat-card-actions>
+                     </mat-card>
                   </div>
-                  </div>
-
-
-
-
-                  
-    </body>
+               </div>
+            </div>
+         </div>
+      </div>
+      <br/>
+   </body>
 </html>
